--- a/deploy/crds/crd-challenges.yaml
+++ b/deploy/crds/crd-challenges.yaml
@@ -211,6 +211,10 @@ spec:
                             tenantID:
                               description: when specifying ClientID and ClientSecret then this field is also needed
                               type: string
+                            useUserManagedIdentity:
+                              type: boolean
+                            userManagedIdentityID:
+                              type: string
                         clouddns:
                           description: Use the Google Cloud DNS API to manage DNS01 challenge records.
                           type: object
@@ -1035,6 +1039,10 @@ spec:
                               type: string
                             tenantID:
                               description: when specifying ClientID and ClientSecret then this field is also needed
+                              type: string
+                            useUserManagedIdentity:
+                              type: boolean
+                            userManagedIdentityId:
                               type: string
                         clouddns:
                           description: Use the Google Cloud DNS API to manage DNS01 challenge records.
@@ -1862,6 +1870,10 @@ spec:
                             tenantID:
                               description: when specifying ClientID and ClientSecret then this field is also needed
                               type: string
+                            useUserManagedIdentity:
+                              type: boolean
+                            userManagedIdentityId:
+                              type: string
                         cloudDNS:
                           description: Use the Google Cloud DNS API to manage DNS01 challenge records.
                           type: object
@@ -2687,6 +2699,10 @@ spec:
                               type: string
                             tenantID:
                               description: when specifying ClientID and ClientSecret then this field is also needed
+                              type: string
+                            useUserManagedIdentity:
+                              type: boolean
+                            userManagedIdentityID:
                               type: string
                         cloudDNS:
                           description: Use the Google Cloud DNS API to manage DNS01 challenge records.
