--- a/deploy/crds/crd-clusterissuers.v1beta1.yaml
+++ b/deploy/crds/crd-clusterissuers.v1beta1.yaml
@@ -244,6 +244,10 @@ spec:
                                   tenantID:
                                     description: when specifying ClientID and ClientSecret then this field is also needed
                                     type: string
+                                  useUserManagedIdentity:
+                                    type: boolean
+                                  userManagedIdentityID:
+                                    type: string
                               clouddns:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
                                 type: object
@@ -1255,6 +1259,10 @@ spec:
                                     type: string
                                   tenantID:
                                     description: when specifying ClientID and ClientSecret then this field is also needed
+                                    type: string
+                                  useUserManagedIdentity:
+                                    type: boolean
+                                  userManagedIdentityId:
                                     type: string
                               clouddns:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
@@ -2270,6 +2278,10 @@ spec:
                                   tenantID:
                                     description: when specifying ClientID and ClientSecret then this field is also needed
                                     type: string
+                                  useUserManagedIdentity:
+                                    type: boolean
+                                  userManagedIdentityId:
+                                    type: string
                               cloudDNS:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
                                 type: object
@@ -3283,6 +3295,10 @@ spec:
                                     type: string
                                   tenantID:
                                     description: when specifying ClientID and ClientSecret then this field is also needed
+                                    type: string
+                                  useUserManagedIdentity:
+                                    type: boolean
+                                  userManagedIdentityID:
                                     type: string
                               cloudDNS:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
