--- a/deploy/crds/crd-issuers.yaml
+++ b/deploy/crds/crd-issuers.yaml
@@ -244,6 +244,10 @@ spec:
                                   tenantID:
                                     description: when specifying ClientID and ClientSecret then this field is also needed
                                     type: string
+                                  useUserManagedIdentity:
+                                    type: boolean
+                                  userManagedIdentityID:
+                                    type: string
                               clouddns:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
                                 type: object
@@ -1269,6 +1273,10 @@ spec:
                                     type: string
                                   tenantID:
                                     description: when specifying ClientID and ClientSecret then this field is also needed
+                                    type: string
+                                  useUserManagedIdentity:
+                                    type: boolean
+                                  userManagedIdentityId:
                                     type: string
                               clouddns:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
@@ -2298,6 +2306,10 @@ spec:
                                   tenantID:
                                     description: when specifying ClientID and ClientSecret then this field is also needed
                                     type: string
+                                  useUserManagedIdentity:
+                                    type: boolean
+                                  userManagedIdentityId:
+                                    type: string
                               cloudDNS:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
                                 type: object
@@ -3325,6 +3337,10 @@ spec:
                                     type: string
                                   tenantID:
                                     description: when specifying ClientID and ClientSecret then this field is also needed
+                                    type: string
+                                  useUserManagedIdentity:
+                                    type: boolean
+                                  userManagedIdentityID:
                                     type: string
                               cloudDNS:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
